--- a/Day85-86 [ Grid ]/grid/package.json
+++ b/Day85-86 [ Grid ]/grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-set-11",
+  "name": "grid",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
